# mojactor

./: Cargo.toml  Makefile
test-bench/: Cargo.toml
test-bench/src/: hello_actor.rs  hello_actor_with_state.rs  hello_virtual_actor.rs  infinite_loop_actor.rs  main.rs  ping_pong_actor.rs  ping_pong_virtual_actor.rs
virtual-actor/: Cargo.toml
virtual-actor-derive/: Cargo.toml
virtual-actor-derive/src/: lib.rs  local_actor_derive.rs  message_derive.rs  virtual_actor_derive.rs  virtual_message_derive.rs
virtual-actor-derive/src/actor_derive/: context_attribute.rs  derive_impl.rs  message_attribute.rs  mod.rs  render_actor_trait_impl.rs  render_internal_mod.rs  render_message_envelope.rs
virtual-actor-persistence/: Cargo.toml
virtual-actor-persistence/src/: actor_persistence_trait.rs  actor_state.rs  actor_with_state_trait.rs  inmemory_persistence.rs  lib.rs
virtual-actor-runtime/: Cargo.toml  README.md
virtual-actor-runtime/benches/: executor_benchmark.rs
virtual-actor-runtime/src/: actor_handle.rs  addr.rs  context_factory_trait.rs  lib.rs  message_dispatcher.rs  one_shot_responder.rs  runtime_context.rs
virtual-actor-runtime/src/address/: actor_handle.rs  actor_task.rs  actor_task_container.rs  addr.rs  errors.rs  local_addr.rs  mod.rs  virtual_addr.rs  weak_local_addr.rs  weak_virtual_addr.rs
virtual-actor-runtime/src/context/: context_factory_trait.rs  mod.rs  runtime_context.rs  runtime_context_factory.rs
virtual-actor-runtime/src/executor/: actor_registry.rs  actor_tasks_registry.rs  error.rs  errors.rs  executor_preferences.rs  handle.rs  local_executor.rs  local_set_wrapper.rs  mod.rs
virtual-actor-runtime/src/messaging/: errors.rs  mailbox.rs  mailbox_error.rs  message_dispatcher.rs  mod.rs  one_shot_responder.rs
virtual-actor-runtime/src/runtime/: mod.rs  runtime_impl.rs  runtime_preferences.rs
virtual-actor-runtime/src/utils/: atomic_counter.rs  atomic_timestamp.rs  cancellation_token_wrapper.rs  mod.rs  notify_once.rs  waiter.rs
virtual-actor-runtime/tests/: actor_errors_test.rs  actor_gc_test.rs  derive_tests.rs  local_executor_tests.rs  runtime_tests.rs
virtual-actor-runtime/tests/actors/: collectable_actor.rs  error_handling_virtual_actor.rs  mod.rs  ping_pong_virtual_actor.rs
virtual-actor/src/: actor_addr.rs  actor_context_trait.rs  actor_factory_trait.rs  actor_id_trait.rs  actor_trait.rs  errors.rs  lib.rs  local_actor_factory.rs  local_actor_factory_trait.rs  local_actor_trait.rs  message_envelope_trait.rs  message_handler_trait.rs  message_processing_result.rs  message_trait.rs  names.rs  responder_trait.rs  virtual_actor_factory.rs  virtual_actor_factory_trait.rs  virtual_actor_trait.rs  virtual_message_trait.rs
virtual-actor/src/actor/: actor_addr.rs  actor_context_trait.rs  actor_factory_trait.rs  actor_id_trait.rs  actor_name.rs  actor_trait.rs  mod.rs  weak_actor_add_trait.rs
virtual-actor/src/local_actor/: default_local_actor_factory.rs  local_actor_constructor_trait.rs  local_actor_factory_trait.rs  local_actor_trait.rs  mod.rs
virtual-actor/src/message/: mailbox_preferences.rs  message_envelope_trait.rs  message_handler_trait.rs  message_name.rs  message_processing_result.rs  message_trait.rs  mod.rs  responder_trait.rs
virtual-actor/src/utils/: cancellation_token_trait.rs  mod.rs  unwind_panic.rs
virtual-actor/src/virtual_actor/: default_virtual_actor_factory.rs  mod.rs  virtual_actor_constructor_trait.rs  virtual_actor_factory_trait.rs  virtual_actor_trait.rs  virtual_message_trait.rs
(+45 files in other folders)
