[package]
name = "test-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.29" }
serde = { version = "1.0.192", features = ["derive", "rc"] }

virtual-actor-runtime = { path = "../virtual-actor-runtime" }
