[package]
name = "virtual-actor-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.43"
quote = "1.0.33"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }