[package]
name = "virtual-actor-persistence"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
serde = { version = "1.0.193", features = ["derive"] }
futures = { version = "0.3.30" }

thiserror = "1.0.52"
serde_cbor = "0.11.2"
bincode = "1.3.3"

virtual-actor-runtime = { path = "../virtual-actor-runtime" }