[package]
name = "virtual-actor-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive", "rc"] }
dashmap = "5.5.3"
thiserror = "1.0.52"
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.35.1",  features = ["rt", "sync", "parking_lot"], default-features = false }
tokio-util = { version = "0.7.10", default-features = false }

virtual-actor = { path = "../virtual-actor" }
virtual-actor-derive = { path = "../virtual-actor-derive" }

[dev-dependencies]
tokio = { version = "1.35.1",  features = ["rt", "sync", "parking_lot", "macros", "time"], default-features = false }
criterion = { version = "0.5.1", features = ["async_tokio"]  }

[[bench]]
name = "executor_benchmark"
harness = false