[package]
name = "virtual-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0.192", features = ["derive", "rc"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
futures = { version = "0.3.29", features = ["executor"] }
