[package]
name = "virtual-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
serde = { version = "1.0.193", features = ["derive", "rc"] }
thiserror = "1.0.52"
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }
futures = { version = "0.3.30" }

[dev-dependencies]
futures = { version = "0.3.30", features = ["executor"] }
